# tl-lcd-linux

./: .gitignore  Cargo.toml  README.md
src/: config.rs  fan.rs  hardware.rs  main.rs  service.rs
src/media/: common.rs  image.rs  mod.rs  sensor.rs  video.rs
