[package]
name = "tl-lcd-linux"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
cbc = "0.1"
clap = { version = "4.5", features = ["derive"] }
des = "0.8"
env_logger = "0.11"
hex = "0.4"
image = { version = "0.24", features = ["jpeg", "png", "bmp", "gif"] }
libc = "0.2"
log = "0.4"
once_cell = "1.19"
parking_lot = "0.12"
rusttype = "0.9"
rusb = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
thiserror = "1.0"
